--- a/index.html
+++ b/index.html
@@ -33,5 +33,21 @@
       </div>
     </div>
   </header>
+  <div class="cover">
+    <div class="wrapper">
+      <h1>
+        We keep things<br>
+        <span>clean and simple</span>
+      </h1>
+      <div class="line"></div>
+      <p>So clean you’ll go crazy wondering why it’s so clean.</p>
+      <a href="#" class="cover__button">See our work</a>
+      <div class="cover__nav">
+        <a href="#" class="cover__nav_item active"></a>
+        <a href="#" class="cover__nav_item"></a>
+        <a href="#" class="cover__nav_item"></a>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
