--- a/index.html
+++ b/index.html
@@ -49,5 +49,51 @@
       </div>
     </div>
   </div>
+  <div class="services">
+    <div class="wrapper">
+      <div class="services__flexcontainer">
+        <div class="services__flexcontainer_item">
+          <p class="services__number">001</p>
+          <div class="services__number-line"></div>
+          <h4 class="services__header">Research</h4>
+          <div class="services__icon">
+            <div class="services__icon_item">
+              <img src="img/services-icons/1.svg">
+            </div>
+          </div>
+          <p class="services__description">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum.
+          </p>
+        </div>
+        <div class="services__flexcontainer_item">
+          <p class="services__number">002</p>
+          <div class="services__number-line"></div>
+          <h4 class="services__header">Build</h4>
+          <div class="services__icon">
+            <div class="services__icon_item">
+              <img src="img/services-icons/2.svg">
+            </div>
+          </div>
+          <p class="services__description">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum.
+          </p>
+        </div>
+        <div class="services__flexcontainer_item">
+          <p class="services__number">003</p>
+          <div class="services__number-line"></div>
+          <h4 class="services__header">Optimize</h4>
+          <div class="services__icon">
+            <div class="services__icon_item">
+              <img src="img/services-icons/3.svg">
+            </div>
+          </div>
+          <p class="services__description">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum.
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+  </div>
 </body>
 </html>
