--- a/index.html
+++ b/index.html
@@ -94,6 +94,13 @@
       </div>
     </div>
   </div>
+  <div class="cover-two">
+    <div class="wrapper">
+      <h2 class="cover-two__description">
+        The design process, at its best, integrates the aspirations of art, science, and culture.
+      </h2>
+      <div class="cover-two__line"></div>
+    </div>
   </div>
 </body>
 </html>
