--- a/index.html
+++ b/index.html
@@ -102,5 +102,51 @@
       <div class="cover-two__line"></div>
     </div>
   </div>
+  <div class="team">
+    <div class="wrapper">
+      <div class="team__flexcontainer">
+        <div class="team__flexcontainer_item">
+          <h3>The team</h3>
+        </div>
+        <div class="team__flexcontainer_item">
+          <div class="team__flexcontainer_photo">
+            <img src="img/team/1.jpg">
+          </div>
+          <h5>Peter Walkin</h5>
+          <p>Founder</p>
+            <div class="team__flexcontainer_social">
+              <a href=""><img src="img/team/social/facebook.svg"></a>
+              <a href=""><img src="img/team/social/twitter.svg"></a>
+              <a href=""><img src="img/team/social/in.svg"></a>
+            </div>
+        </div>
+        <div class="team__flexcontainer_item">
+          <div class="team__flexcontainer_photo">
+            <img src="img/team/2.jpg">
+          </div>
+          <h5>Robert Porter</h5>
+          <p>Developer</p>
+          <div class="team__flexcontainer_social">
+            <a href=""><img src="img/team/social/facebook.svg"></a>
+            <a href=""><img src="img/team/social/twitter.svg"></a>
+            <a href=""><img src="img/team/social/in.svg"></a>
+          </div>
+        </div>
+        <div class="team__flexcontainer_item">
+          <div class="team__flexcontainer_photo">
+            <img src="img/team/3.jpg">
+          </div>
+          <h5>Dina Johnson</h5>
+          <p>Designer</p>
+          <div class="team__flexcontainer_social dina">
+            <a href=""><img src="img/team/social/twitter.svg"></a>
+            <a href=""><img src="img/team/social/behance.svg"></a>
+            <a href=""><img src="img/team/social/ball.svg"></a>
+            <a href=""><img src="img/team/social/instagram.svg"></a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
