--- a/index.html
+++ b/index.html
@@ -148,5 +148,25 @@
       </div>
     </div>
   </div>
+  <div class="testimonials">
+    <div class="wrapper">
+      <h6>Testimonials</h6>
+      <div class="testimonials__line"></div>
+      <div class="testimonials__flexcontainer">
+        <div class="testimonials__flexcontainer_item">
+          <p>
+            Vestibulum sed commodo nunc, eu aliquet sem. Curabitur semper, sem ut posuere tincidunt, sem velit sollicitudin odio, quis hendrerit sapien nunc sit amet sem. Ut sollicitudin dignissim ligula nec porta.
+          </p>
+          <p class="fix">Robert Shapiro, CEO of trulr</p>
+        </div>
+        <div class="testimonials__flexcontainer_item fix-item">
+          <p>
+            Curabitur semper, sem ut posuere tincidunt, sem velit sollicitudin odio, quis hendrerit sapien nunc sit amet sem. Ut sollicitudin dignissim ligula nec porta.
+          </p>
+          <p class="fix fix2">Lila stokinova, designer at nike</p>
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
