--- a/index.html
+++ b/index.html
@@ -168,5 +168,20 @@
       </div>
     </div>
   </div>
+  <footer class="footer">
+    <div class="wrapper">
+      <div class="footer__flexcontainer">
+        <div class="footer__flexcontainer_item1">
+          <a href="#">2014 Stone Creative Agency</a>
+        </div>
+        <div class="footer__flexcontainer_item2">
+          <a href="#" class="footer__button">Get in touch with us</a>
+        </div>
+        <div class="footer__flexcontainer_item3">
+          <p>1423 Elk St, Brooklyn NY, 82328</p>
+        </div>
+      </div>
+    </div>
+  </footer>
 </body>
 </html>
